--- a/album/index.html
+++ b/album/index.html
@@ -43,7 +43,7 @@
 <p>图片搜集于互联网，侵权请<a href="https://egsee.github.io/message/">留言</a>，马上处理😊。</p>
 </div><link rel="stylesheet" href="https://cdnjs.loli.net/ajax/libs/social-share.js/1.0.16/css/share.min.css"><div class="social-share"></div><script src="https://cdnjs.loli.net/ajax/libs/social-share.js/1.0.16/js/social-share.min.js"></script></article></div><div class="card"><div class="card-content"><h3 class="menu-label has-text-centered">喜欢这篇文章？打赏一下作者吧</h3><div class="buttons is-centered"><a class="button is-info donate"><span class="icon is-small"><i class="fab fa-alipay"></i></span><span>支付宝</span><span class="qrcode"><img src="https://raw.githubusercontent.com/removeif/blog_image/master/img/2019/20190802135456.png" alt="支付宝"></span></a><a class="button is-success donate"><span class="icon is-small"><i class="fab fa-weixin"></i></span><span>微信</span><span class="qrcode"><img src="https://raw.githubusercontent.com/removeif/blog_image/master/img/2019/20190802135550.png" alt="微信"></span></a></div></div></div><div class="card"><div class="card-content"><h3 class="title is-5">评论</h3><div id="comment-container"></div><link rel="stylesheet" href="https://cdnjs.loli.net/ajax/libs/gitalk/1.6.0/gitalk.css"><script src="/public-blog/js/gitalk.min.js"></script><script>var gitalk = new Gitalk({
             id: 'aa858bdfa7b1f9ae7f4c6d14d36d8c1a',
-            repo: 'public-blog-comment',
+            repo: 'public-blog-comments',
             owner: 'egsee',
             clientID: 'fec450a2bb38d0063cc8',
             clientSecret: '24432e44cfc517df8d522a0679a34f5ada039bd9',
